--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase-admin": "^11.10.1",
     "moment": "^2.29.1",
     "onnxruntime-node": "^1.7.0",
+    "request": "^2.88.2",
     "whois": "^2.2.0"
   },
   "name": "scamdetection",
